<resources>
    <string name="app_name">Jobs APP</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loginForm">Log - In</string>
    <string name="userName">UserName</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="createUser">Create User</string>
    <string name="forgotPassword">Recover Password</string>
    <string name="confirmpass">Confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_nav_drawer_activy">NavDrawerActivy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JOBS</string>
    <string name="nav_header_subtitle">Jobs Aplications</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_lista_formularios">Forms list</string>
    <string name="menu_salir">Log-Out</string>
    <string name="menu_form">Form</string>
    <string name="title_activity_lista_formularios">Forms Jobs</string>
    <string name="title_activity_lista_form_add_udp">ListaFormAddUdp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>

