<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_list_forms"
            android:icon="@drawable/ic_lista_forms"
            android:title="@string/menu_lista_formularios" />

        <item
            android:id="@+id/nav_form"
            android:icon="@drawable/ic_form_menu"
            android:title="@string/menu_form" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_off"
            android:title="@string/menu_salir" />
    </group>
</menu>
